--- a/gui/default/index.html
+++ b/gui/default/index.html
@@ -392,6 +392,14 @@
                         <span>{{folderStats[folder.id].lastScan | date:'yyyy-MM-dd HH:mm:ss'}}</span>
                       </td>
                     </tr>
+                    <tr>
+                      <th><span class="fa fa-fw fa-exchange"></span>&nbsp;<span translate>Last Local Changes</span></th>
+                        <td class="text-right">
+                          <span tooltip data-original-title="{{last = localChangeEvents.length-1; localChangeEvents[last].id}}: {{localChangeEvents[last].data.type}}
+                          {{localChangeEvents[last].data.action}} {{localChangeEvents[last].data.path}}">
+                          {{localChangeEvents[localChangeEvents.length-1].data.path}}
+                        </td>
+                    </tr>
                     <tr ng-if="folder.type != 'readonly' && folderStats[folder.id].lastFile && folderStats[folder.id].lastFile.filename">
                       <th><span class="fa fa-fw fa-exchange"></span>&nbsp;<span translate>Last File Received</span></th>
                       <td class="text-right">
