Display last 10 changes instead of just last one

--- a/gui/default/index.html
+++ b/gui/default/index.html
@@ -395,8 +395,7 @@
                     <tr>
                       <th><span class="fa fa-fw fa-exchange"></span>&nbsp;<span translate>Last Local Changes</span></th>
                         <td class="text-right">
-                          <span tooltip data-original-title="{{last = localChangeEvents.length-1; localChangeEvents[last].id}}: {{localChangeEvents[last].data.type}}
-                          {{localChangeEvents[last].data.action}} {{localChangeEvents[last].data.path}}">
+                          <span tooltip data-original-title="{{localChangeEventLog}}">
                           {{localChangeEvents[localChangeEvents.length-1].data.path}}
                         </td>
                     </tr>
