Moved button, Removed dead code, Put html in modal page instead of building in code

--- a/gui/default/syncthing/device/changeLogModalView.html
+++ b/gui/default/syncthing/device/changeLogModalView.html
@@ -1,6 +1,20 @@
+<style> th, td { padding: 3px; } </style>
 <modal id="localChangeLog" status="default" icon="{{'exchange'}}" heading="{{'Local Changes' | translate}}" large="yes" closeable="yes">
     <div class="modal-body">
-        {{localChangeEventLog}}
+        <table>
+          <tr>
+            <th>&nbsp;Type&nbsp;</th>
+            <th>&nbsp;Action&nbsp;</th>
+            <th>&nbsp;Path&nbsp;</th>
+            <th>&nbsp;Time&nbsp;</th>
+          </tr>
+          <tr ng-repeat="ChangeLog in localChangeEvents">
+            <td>&nbsp;{{ChangeLog.data.type}}&nbsp;</td>
+            <td>&nbsp;{{ChangeLog.data.action}}&nbsp;</td>
+            <td>&nbsp;{{ChangeLog.data.path}}&nbsp;</td>
+            <td>&nbsp;{{ChangeLog.time | date:'medium'}}&nbsp;</td>
+          </tr>
+        </table>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">
