--- a/gui/default/index.html
+++ b/gui/default/index.html
@@ -501,15 +501,6 @@
                     <th><span class="fa fa-fw fa-clock-o"></span>&nbsp;<span translate>Uptime</span></th>
                     <td class="text-right">{{system.uptime | duration:"m"}}</td>
                   </tr>
-                  <!--<tr>
-                    <th><span class="fa fa-fw fa-exchange"></span>&nbsp;<span translate>Last Local Changes</span></th>
-                    <td class="text-right">
-                      <span tooltip data-original-title="{{localChangeLog}}">
-                      {{localChangeEvents[localChangeEvents.length-1].data.path}}
-                      </span>
-                      <a ng-href="localChangeLog()">{{localChangeEvents[localChangeEvents.length-1].data.path}}</a>
-                    </td>
-                  </tr>-->
                   <tr>
                     <th><span class="fa fa-fw fa-tag"></span>&nbsp;<span translate>Version</span></th>
                     <td class="text-right">
@@ -518,13 +509,6 @@
                   </tr>
                 </tbody>
               </table>
-            </div>
-            <div class="panel-footer">
-              <span class="pull-right">
-                <button type="button" class="btn btn-sm btn-default" ng-click="localChangeLog()">
-                  <span class="fa fa-fw fa-exchange"></span>&nbsp;<span translate>Last Local Changes</span>
-                </button>
-              </span>
             </div>
           </div>
         </div>
@@ -622,9 +606,14 @@
           </div>
         </div>
         <div class="form-group">
-          <button type="button" class="btn btn-sm btn-default pull-right" ng-click="addDevice()">
-            <span class="fa fa-plus"></span>&nbsp;<span translate>Add Remote Device</span>
-          </button>
+          <span class="pull-right">
+            <button type="button" class="btn btn-sm btn-default" ng-click="localChangeLog()">
+              <span class="fa fa-fw fa-history"></span>&nbsp;<span translate>Change Log</span>
+            </button>
+            <button type="button" class="btn btn-sm btn-default" ng-click="addDevice()">
+              <span class="fa fa-plus"></span>&nbsp;<span translate>Add Remote Device</span>
+            </button>
+          </span>
           <div class="clearfix"></div>
         </div>
       </div>
