--- a/gui/default/index.html
+++ b/gui/default/index.html
@@ -607,8 +607,8 @@
         </div>
         <div class="form-group">
           <span class="pull-right">
-            <button type="button" class="btn btn-sm btn-default" ng-click="localChangeLog()">
-              <span class="fa fa-fw fa-history"></span>&nbsp;<span translate>Change Log</span>
+            <button type="button" class="btn btn-sm btn-default" ng-click="localDiskChanges()">
+              <span class="fa fa-fw fa-history"></span>&nbsp;<span translate>Last Local Changes</span>
             </button>
             <button type="button" class="btn btn-sm btn-default" ng-click="addDevice()">
               <span class="fa fa-plus"></span>&nbsp;<span translate>Add Remote Device</span>
