--- a/gui/default/syncthing/device/changeLogModalView.html
+++ b/gui/default/syncthing/device/changeLogModalView.html
@@ -10,7 +10,7 @@
             <th translate>Time</th>
           </tr>
           <tr ng-repeat="localChangeEvent in localChangeEvents">
-            <td>{{localChangeEvent.data.lastModBy}}</td>
+            <td>{{localChangeEvent.data.lastModifiedBy}}</td>
             <td>{{localChangeEvent.data.action}}</td>
             <td>{{localChangeEvent.data.type}}</td>
             <td>{{localChangeEvent.data.path}}</td>
